Fix problem, throwing NPE on null of the list